--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     const firebaseConfig = {
         apiKey: "AIzaSyDtDX8xK1m1VxjfRMFsDZXoAH36l8Izyz8",
         authDomain: "control-transporte-c4f61.firebaseapp.com",
-        projectId: "control-transtransporte-c4f61",
+        projectId: "control-transporte-c4f61", /* <-- AQUÍ ESTABA EL ERROR (YA CORREGIDO) */
         storageBucket: "control-transporte-c4f61.appspot.com",
         messagingSenderId: "447956658904",
         appId: "1:447956658904:web:81e9b40fb55107f93ec5ad"
