--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 padding: 5px;
                 text-align: left; 
                 vertical-align: middle; 
-                word-break: break-word; /* Esta es la regla clave que permite el salto de línea */
+                word-break: break-word;
             }
 
             th { 
@@ -190,20 +190,20 @@
                 text-align: right; 
             }
             
-            /* --- Ancho de Columnas --- */
+            /* --- Ancho de Columnas (Corregido) --- */
             th.action-cell, td.action-cell { display: none !important; }
 
             thead th:nth-child(1), tbody td:nth-child(1) { width: 3%; text-align: center; } /* Item */
-            thead th:nth-child(2), tbody td:nth-child(2) { width: 8%; } /* Fecha - CORREGIDO */
-            thead th:nth-child(3), tbody td:nth-child(3) { width: 14%; } /* Nombres */
-            thead th:nth-child(4), tbody td:nth-child(4) { width: 8%; } /* Placa - CORREGIDO */
+            thead th:nth-child(2), tbody td:nth-child(2) { width: 8%; } /* Fecha */
+            thead th:nth-child(3), tbody td:nth-child(3) { width: 10%; } /* Nombres (Reducido) */
+            thead th:nth-child(4), tbody td:nth-child(4) { width: 10%; } /* Placa (Aumentado) */
             thead th:nth-child(5), tbody td:nth-child(5) { width: 10%; } /* Material */
             thead th:nth-child(6), tbody td:nth-child(6) { width: 10%; } /* Cantera */
             thead th:nth-child(7), tbody td:nth-child(7) { width: 15%; } /* Proyecto */
             thead th:nth-child(8), tbody td:nth-child(8) { width: 20%; } /* Observaciones */
             thead th:nth-child(9), tbody td:nth-child(9) { width: 4%; text-align: center; } /* Volumen */
             thead th:nth-child(10), tbody td:nth-child(10) { width: 4%; text-align: center; } /* # Viajes */
-            thead th:nth-child(11), tbody td:nth-child(11) { width: 4%; text-align: center; font-weight: bold; } /* Vol. Total */
+            thead th:nth-child(11), tbody td:nth-child(11) { width: 6%; text-align: center; font-weight: bold; } /* Vol. Total (Aumentado) */
             
             #signature-section {
                 display: flex; 
