--- a/index.html
+++ b/index.html
@@ -23,15 +23,11 @@
         <button id="btnLogout" class="btn-secondary" style="margin-left: auto;">Cerrar Sesión</button>
     </div>
 
-    <div class="tabs">
-        <button class="tab-button active" data-tab="tab-registro">Registro</button>
-        <button class="tab-button" data-tab="tab-admin">Administración</button>
-        <button class="tab-button" data-tab="tab-summary">Reportes</button>
-    </div>
-
-    <div id="tab-registro" class="tab-content active"></div>
-    <div id="tab-admin" class="tab-content"></div>
-    <div id="tab-summary" class="tab-content"></div>
+    <div id="tab-registro" class="no-print"></div>
+    <div id="tab-admin" class="no-print"></div>
+    
+    <div id="tab-summary"></div>
+    
     <div id="signature-section"></div>
 
 </div>
